--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@ padding: 60px;
 }
     </style>
     <center><h1 class="borderexample">Holly Potter</h1></center>
-    <center><p class="bordertext">Welcome to my website. You can learn more about
-      me, see some of my work, and you can check out my linkedin and instagram. <p></center>
+    <center><p class="bordertext">Some of my projects...<p></center>
 <input type="image" src="linkedlogo.png" width="50" height="50"
   onclick="window.open"('https://www.linkedin.com/in/holly-potter-993a97166/')/>
 <input type="image" src="instalogo.png" width="50" height="50"
