--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ li a:hover:not(.active) {
   </head>
   <body>
     <ul>
-        <li><a class="active" href="recipies.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a class="active" href="portfolio.html">Portfolio</a></li>
         <li style="float:right"><a class="active" href="about.html">About Me</a></li>
