--- a/about.html
+++ b/about.html
@@ -61,6 +61,6 @@ li a:hover:not(.active) {
     </ul>
     <center>
     <h1> About me. </h1>
-    <p> My name is Holly Potter and I am 16 years old. I go to Mountain View High School. </p>
+    <p> My name is Holly Potter and I attend University of San Francisco. </p>
     <p> While I'm not at school I enjoy </p>
     </center>
