--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ padding: 60px;
 }
     </style>
     <center><h1 class="borderexample">Holly Potter</h1></center>
-    <center><p class="bordertext">Some of my projects...<p></center>
+    <center><p class="bordertext">Some of my projects below...<p></center>
 <input type="image" src="linkedlogo.png" width="50" height="50"
-  onclick="window.open"('https://www.linkedin.com/in/holly-potter-993a97166/')/>
+  onclick="window.open"("https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js")/>
 <input type="image" src="instalogo.png" width="50" height="50"
-    onclick="window.open"('https://www.instagram.com/hollyjpotter/?hl=en')/>
+    onclick="window.open"('https://vizhub.com/hollyjpotter/6b5d2b9735ec475fa59ee8eada515b7b')/>
 
 
 
