--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ padding: 60px;
     </style>
     <center><h1 class="borderexample">Holly Potter</h1></center>
     <center><p class="bordertext">Some of my projects below...
-        <a href="https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js">Hyperlink</a>
-        <a href="https://vizhub.com/hollyjpotter/6b5d2b9735ec475fa59ee8eada515b7b">Hyperlink</a>
+        <p><a href="https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js">Hyperlink</a></p>
+        <p><a href="https://vizhub.com/hollyjpotter/6b5d2b9735ec475fa59ee8eada515b7b">Hyperlink</a></p>
         <p></center>
 <input type="image" src="linkedlogo.png" width="50" height="50"
   onclick="window.open"("https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js")/>
