--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ padding: 60px;
     <center><p class="bordertext">Some of my projects below...
       <p>Assignment 2</p>
         <p><a href="https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js">Bar Chart</a></p>
-        <p><a href="https://vizhub.com/hollyjpotter/6b5d2b9735ec475fa59ee8eada515b7b">Scatter Plot</a></p>
+        <p><a href="https://vizhub.com/hollyjpotter/6b5d2b9735ec475fa59ee8eada515b7b">Dot Plot</a></p>
         </p></center>
 <input type="image" src="vizHubLogo.png" width="100" height="50"
   onclick="window.open"("https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js")/>
