--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           left: 0;
           bottom: 0;
           width: 100%;
-          background-color: #fcbaba;
+          background-color: #a48ff2;
           color: white;
           text-align: center;
         }
@@ -28,7 +28,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #fcbaba;
+    background-color: #a48ff2;
 }
 
 li {
@@ -44,11 +44,11 @@ li a {
 }
 
 li a:hover:not(.active) {
-    background-color: #fcbaba;
+    background-color: #896df2;
 }
 
 .active {
-    background-color: #fcbaba;
+    background-color: #a48ff2;
 }
 </style>
   </head>
