--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,25 @@ li a:hover:not(.active) {
 .active {
     background-color: #a48ff2;
 }
+  
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  border-radius: 5px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+img {
+  border-radius: 5px 5px 0 0;
+}
+
+.container {
+  padding: 2px 16px;
+}
 </style>
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -85,6 +104,5 @@ img {
     <p>Interior Designer</p> 
   </div>
 </div>
-
 </body>
 </html>
