--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,7 @@ li a:hover:not(.active) {
   transition: 0.3s;
   width: 40%;
   border-radius: 5px;
+  color: White;
 }
 
 .card:hover {
@@ -72,7 +73,7 @@ img {
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h2>Round Card</h2>
+<h2>P5js</h2>
 
 <div class="card">
   <img src="img_avatar2.png" alt="Avatar" style="width:100%">
