--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@ img {
 <h2>P5js</h2>
 
 <div class="card">
-  <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b>Jane Doe</b></h4> 
     <p>Interior Designer</p> 
