--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@ li a:hover:not(.active) {
   transition: 0.3s;
   width: 40%;
   border-radius: 5px;
-  color: White;
+  background-color: White;
 }
 
 .card:hover {
