--- a/portfolio.html
+++ b/portfolio.html
@@ -78,9 +78,37 @@ img {
 <div class="card">
   <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
   <div class="container">
-    <h4><b>Jane Doe</b></h4> 
-    <p>Interior Designer</p> 
+    <h4><b>Assignment 2</b></h4> 
+    <p>Box Plot</p> 
   </div>
-</div>
+  </div>
+  <div class="card">
+  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Assignment 2</b></h4> 
+    <p>Dot Plot</p> 
+  </div>
+  </div>
+  <div class="card">
+  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Assignment 3</b></h4> 
+    <p>Histogram</p> 
+  </div>
+  </div>
+  <div class="card">
+  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Assignment 3</b></h4> 
+    <p>Box Plot</p> 
+  </div>
+  </div>
+  <div class="card">
+  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h4><b>Assignment 3</b></h4> 
+    <p>???</p> 
+  </div>
+  </div>
 </body>
 </html>
