--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,8 @@ img {
   <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b>Assignment 2</b></h4> 
-    <p>Box Plot</p> 
+    <p>Bar Chart</p> 
+    <p><a href="https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js">Bar Chart</a></p>
   </div>
   </div>
   <div class="card">
@@ -86,6 +87,7 @@ img {
   <div class="container">
     <h4><b>Assignment 2</b></h4> 
     <p>Dot Plot</p> 
+    <p><a href="https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js">Bar Chart</a></p>
   </div>
   </div>
   <div class="card">
