--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@ img {
   <div class="container">
     <h4><b>Assignment 2</b></h4> 
     <p>Dot Plot</p> 
-    <p><a href="https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js">Bar Chart</a></p>
+    <p><a href="https://vizhub.com/hollyjpotter/6b5d2b9735ec475fa59ee8eada515b7b">Bar Chart</a></p>
   </div>
   </div>
   <div class="card">
