--- a/portfolio.html
+++ b/portfolio.html
@@ -69,47 +69,71 @@ img {
 .container {
   padding: 2px 16px;
 }
+  
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+ }
+ .row {margin: 0 -5px;}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-<div class="card">
-  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>Assignment 2</b></h4> 
-    <p>Bar Chart</p> 
-    <p><a href="https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js">Bar Chart</a></p>
-  </div>
-  </div>
-  <div class="card">
-  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>Assignment 2</b></h4> 
-    <p>Dot Plot</p> 
-    <p><a href="https://vizhub.com/hollyjpotter/6b5d2b9735ec475fa59ee8eada515b7b">Dot Plot</a></p>
-  </div>
-  </div>
-  <div class="card">
-  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>Assignment 3</b></h4> 
-    <p>Histogram</p> 
-  </div>
-  </div>
-  <div class="card">
-  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>Assignment 3</b></h4> 
-    <p>Box Plot</p> 
-  </div>
-  </div>
-  <div class="card">
-  <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>Assignment 3</b></h4> 
-    <p>???</p> 
-  </div>
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+      <h4><b>Assignment 2</b></h4> 
+        <p>Bar Chart</p> 
+        <p><a href="https://vizhub.com/hollyjpotter/187eb09333fe429e9bc810fe9aafde20?edit=files&file=sketch.js">Bar Chart</a></p>
+      </div>
+      </div>
+      </div>
+      <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h4><b>Assignment 2</b></h4> 
+        <p>Dot Plot</p> 
+        <p><a href="https://vizhub.com/hollyjpotter/6b5d2b9735ec475fa59ee8eada515b7b">Dot Plot</a></p>
+      </div>
+      </div>
+      </div>
+      <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h4><b>Assignment 3</b></h4> 
+        <p>Histogram</p> 
+      </div>
+      </div>
+      </div>
+      <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+      <h4><b>Assignment 3</b></h4> 
+        <p>Box Plot</p> 
+      </div>
+      </div>
+      </div>
+      <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h4><b>Assignment 3</b></h4> 
+        <p>???</p> 
+      </div>
+      </div>
+      </div>
   </div>
 </body>
 </html>
