--- a/portfolio.html
+++ b/portfolio.html
@@ -50,37 +50,46 @@ li a:hover:not(.active) {
 .active {
     background-color: #a48ff2;
 }
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 40%;
-  border-radius: 5px;
-  background-color: White;
+* {
+  box-sizing: border-box;
 }
 
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-img {
-  border-radius: 5px 5px 0 0;
-}
-
-.container {
-  padding: 2px 16px;
-}
-  
+/* Float four columns side by side */
 .column {
   float: left;
   width: 50%;
   padding: 0 10px;
- }
- .row {margin: 0 -5px;}
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 0px;}
+
 /* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
   clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
 }
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
