--- a/portfolio.html
+++ b/portfolio.html
@@ -95,6 +95,12 @@ body {
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a class="active" href="portfolio.html">Portfolio</a></li>
+        <li style="float:right"><a class="active" href="about.html">About Me</a></li>
+  </ul>
 <div class="row">
   <div class="column">
     <div class="card">
