--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@ li a:hover:not(.active) {
 }
 
 .active {
-    background-color: #a48ff2;
+    background-color: #896df2;
 }
 * {
   box-sizing: border-box;
