--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ li a:hover:not(.active) {
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="#experience">Experience</a></li>
-        <li><a class="active" href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li style="float:right"><a class="active" href="about.html">About Me</a></li>
     </ul>
     <style>
