--- a/portfolio.html
+++ b/portfolio.html
@@ -108,6 +108,7 @@ body {
       <div class="container">
         <h4><b>Assignment 3</b></h4> 
         <p>Histogram</p> 
+        <p><a href="https://vizhub.com/hollyjpotter/a5d6722ecf7740c68f2cc4ce1f30c0e6?edit=files&file=sketch.js>Histogram"</a></p>
        </div>
      </div>
    </div>
@@ -116,7 +117,7 @@ body {
       <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
       <div class="container">
       <h4><b>Assignment 3</b></h4> 
-        <p>Box Plot</p> 
+        <p>Box Plot - Not Completed</p> 
       </div>
     </div>
    </div>
@@ -125,7 +126,7 @@ body {
       <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
       <div class="container">
         <h4><b>Assignment 3</b></h4> 
-        <p>???</p> 
+        <p>StripChart - Not Completed</p> 
        </div>
      </div>
    </div>
