--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@ body {
       <div class="container">
         <h4><b>Assignment 3</b></h4> 
         <p>Histogram</p> 
-        <p><a href="https://vizhub.com/hollyjpotter/a5d6722ecf7740c68f2cc4ce1f30c0e6?edit=files&file=sketch.js>Histogram"</a></p>
+        <p><a href="https://vizhub.com/hollyjpotter/a5d6722ecf7740c68f2cc4ce1f30c0e6?edit=files&file=sketch.js>Histogram">Histogram</a></p>
        </div>
      </div>
    </div>
