--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,8 @@ body {
       <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
       <div class="container">
       <h4><b>Assignment 3</b></h4> 
-        <p>Box Plot - Not Completed</p> 
+        <p>Box Plot</p> 
+        <p><a href="https://vizhub.com/hollyjpotter/07b5bafdfd5949638ffbaec39633e9a0?edit=files">Histogram</a></p>
       </div>
     </div>
    </div>
