--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@ body {
       <div class="container">
       <h4><b>Assignment 3</b></h4> 
         <p>Box Plot</p> 
-        <p><a href="https://vizhub.com/hollyjpotter/07b5bafdfd5949638ffbaec39633e9a0?edit=files">Histogram</a></p>
+        <p><a href="https://vizhub.com/hollyjpotter/07b5bafdfd5949638ffbaec39633e9a0?edit=files">Box Plot</a></p>
       </div>
     </div>
    </div>
