--- a/portfolio.html
+++ b/portfolio.html
@@ -106,6 +106,36 @@ body {
       <div class="card">
       <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
       <div class="container">
+        <h4><b>Assignment 5</b></h4> 
+        <p>d3 Bubble Chart</p> 
+        <p><a href="https://vizhub.com/hollyjpotter/cbd08bb8d89d4ee4bb74e27d72f2e1a9?edit=files">Histogram</a></p>
+       </div>
+     </div>
+   </div>
+  <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h4><b>Assignment 5</b></h4> 
+        <p>d3 LineChart -- not Done</p> 
+        <!-- <p><a href="https://vizhub.com/hollyjpotter/cbd08bb8d89d4ee4bb74e27d72f2e1a9?edit=files">Histogram</a></p> -->
+       </div>
+     </div>
+   </div>
+  <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h4><b>Assignment 4</b></h4> 
+        <p>d3 ScattePlot Matrix-- not Done</p> 
+        <!--<p><a href="https://vizhub.com/hollyjpotter/cbd08bb8d89d4ee4bb74e27d72f2e1a9?edit=files">Histogram</a></p> -->
+       </div>
+     </div>
+   </div>
+  <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
         <h4><b>Assignment 4</b></h4> 
         <p>d3 BarChart</p> 
         <p><a href="https://vizhub.com/hollyjpotter/cbd08bb8d89d4ee4bb74e27d72f2e1a9?edit=files">Histogram</a></p>
