--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@ body {
       <div class="container">
         <h4><b>Assignment 5</b></h4> 
         <p>d3 Bubble Chart</p> 
-        <p><a href="https://vizhub.com/hollyjpotter/cbd08bb8d89d4ee4bb74e27d72f2e1a9?edit=files">Histogram</a></p>
+        <p><a href="https://vizhub.com/hollyjpotter/958e2190a8ed454fa4049ec7f06ad77f?edit=files">Bubble Chart</a></p>
        </div>
      </div>
    </div>
