--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,17 @@ body {
         <li><a class="active" href="portfolio.html">Portfolio</a></li>
         <li style="float:right"><a class="active" href="about.html">About Me</a></li>
   </ul>
+  <div class="row">
+  <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h4><b>Assignment 6</b></h4> 
+        <p>d3 Bar Chart with Sequential Colors</p> 
+        <p><a href="https://vizhub.com/hollyjpotter/d82af656538349699359b626d19b612f?edit=files">Bubble Chart</a></p>
+       </div>
+     </div>
+   </div>
 <div class="row">
   <div class="column">
       <div class="card">
