--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@ body {
       <div class="container">
         <h4><b>Assignment 6</b></h4> 
         <p>d3 Bar Chart with Sequential Colors</p> 
-        <p><a href="https://vizhub.com/hollyjpotter/d82af656538349699359b626d19b612f?edit=files">Bubble Chart</a></p>
+        <p><a href="https://vizhub.com/hollyjpotter/d82af656538349699359b626d19b612f?edit=files">Sequential Bar Chart</a></p>
        </div>
      </div>
    </div>
