--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,16 @@ body {
         <li><a class="active" href="portfolio.html">Portfolio</a></li>
         <li style="float:right"><a class="active" href="about.html">About Me</a></li>
   </ul>
+  <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
+        <h4><b>Assignment 7</b></h4> 
+        <p>Node Linked Diagram with Force Directed Layout</p> 
+        <p><a href="https://vizhub.com/hollyjpotter/61756459e9494e00944b380ae9a3d27c?edit=files">Sequential Bar Chart</a></p>
+       </div>
+     </div>
+   </div>
   <div class="row">
   <div class="column">
       <div class="card">
