--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@ body {
       <div class="container">
         <h4><b>Assignment 7</b></h4> 
         <p>Node Linked Diagram with Force Directed Layout</p> 
-        <p><a href="https://vizhub.com/hollyjpotter/61756459e9494e00944b380ae9a3d27c?edit=files">Sequential Bar Chart</a></p>
+        <p><a href="https://vizhub.com/hollyjpotter/61756459e9494e00944b380ae9a3d27c?edit=files">Node Linked Diagram with Force Directed Layout</a></p>
        </div>
      </div>
    </div>
