--- a/portfolio.html
+++ b/portfolio.html
@@ -105,9 +105,19 @@ body {
       <div class="card">
       <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
       <div class="container">
+        <h4><b>Assignment 8</b></h4> 
+        <p>Line Chart with Interactions</p> 
+        <p><a href="https://vizhub.com/hollyjpotter/61756459e9494e00944b380ae9a3d27c?edit=files">Line Chart with Interactions</a></p>
+       </div>
+     </div>
+   </div>
+  <div class="column">
+      <div class="card">
+      <img src="vizHubLogo.png" alt="Avatar" style="width:100%">
+      <div class="container">
         <h4><b>Assignment 7</b></h4> 
         <p>Node Linked Diagram with Force Directed Layout</p> 
-        <p><a href="https://vizhub.com/hollyjpotter/61756459e9494e00944b380ae9a3d27c?edit=files">Node Linked Diagram with Force Directed Layout</a></p>
+        <p><a href="https://vizhub.com/hollyjpotter/65f330daa63e4f95bd26a0a5cf540269?edit=files">Node Linked Diagram with Force Directed Layout</a></p>
        </div>
      </div>
    </div>
