--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ li a:hover:not(.active) {
   <body>
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="#experience">Experience</a></li>
+        <li><a href="experience.html">Experience</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li style="float:right"><a class="active" href="about.html">About Me</a></li>
     </ul>
