--- a/experience.html
+++ b/experience.html
@@ -59,9 +59,12 @@ li a:hover:not(.active) {
         <li style="float:right"><a class="active" href="about.html">About Me</a></li>
     </ul>
     <center>
-    <h1> Experiences </h1>
-    <p> I </p>
-    <p> While I'm not at school I enjoy </p>
+    <h1> BlackHat and WhiteHat </h1>
+    <p>Blackhat - Link - https://vizhub.com/LG0498/ba75f85f41a4461b961b2e1d62adf745?edit=files</p>
+      <p>The color choices of the background could be improved. The orange background is not necessary and a white would be easier to read.</p>
+      <p>The title is quite vague. This may be due to the fact that it is out of context but at first I did not know what was being talked about (I don’t really know).</p>
+      <p>The x axis starts at 1999 but the data starts at 2000. This doesn't really make sense since they could just start it at 2000.</p>
+      <p>The y axis also starts at 200 instead of starting at 0 which also leads to a misleading visualization.</p>
     </center>
   </body>
   </html>
