--- a/experience.html
+++ b/experience.html
@@ -65,6 +65,9 @@ li a:hover:not(.active) {
       <p>The title is quite vague. This may be due to the fact that it is out of context but at first I did not know what was being talked about (I don’t really know).</p>
       <p>The x axis starts at 1999 but the data starts at 2000. This doesn't really make sense since they could just start it at 2000.</p>
       <p>The y axis also starts at 200 instead of starting at 0 which also leads to a misleading visualization.</p>
+    <p>Whitehat</p>
+      <img src="img_girl.jpg" width="500" height="600">
+      <p></p>
     </center>
   </body>
   </html>
