--- a/experience.html
+++ b/experience.html
@@ -66,7 +66,7 @@ li a:hover:not(.active) {
       <p>The x axis starts at 1999 but the data starts at 2000. This doesn't really make sense since they could just start it at 2000.</p>
       <p>The y axis also starts at 200 instead of starting at 0 which also leads to a misleading visualization.</p>
     <p>Whitehat</p>
-      <img src="img_girl.jpg" width="500" height="600">
+      <img src="Screenshot 2022-04-26 at 11.36.36 AM.png" width="500" height="600">
       <p></p>
     </center>
   </body>
