--- a/experience.html
+++ b/experience.html
@@ -67,7 +67,9 @@ li a:hover:not(.active) {
       <p>The y axis also starts at 200 instead of starting at 0 which also leads to a misleading visualization.</p>
     <p>Whitehat</p>
       <img src="Screenshot 2022-04-26 at 11.36.36 AM.png" width="600" height="500">
-      <p></p>
+      <p>This is an improvement since now it is a barchart and for each year it is very clear how many runs there were.</p>
+      <p>Now the y axis starts at 0</p>
+      <p>The colors are not confusing now.</p>
     </center>
   </body>
   </html>
